Updating automated packaging mechanism for future releases
* Updating all Vagrant machines to the latest versions
* Grouping vagrant instances into Driver/Packaging
* Correcting system library installation for CentOS 5.11
* Re-enabling CentOS 5.11 (DSE packages will now build)
* Dynamically enabling riptano or datastax repo based on id_rsa key
* Allowing Vagrantfile instances to be used without `build.sh` script
* Renamed variables to match updated naming (e.g.cpp-dse-driver)

--- a/vagrant/centos/5/Vagrantfile
+++ b/vagrant/centos/5/Vagrantfile
@@ -1,5 +1,6 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
+require "fileutils"
 
 # Ensure provisioning arguments are set
 if !ENV.has_key?("LIBUV")
@@ -19,7 +20,19 @@ CPP_DRIVER_PROVISION_SCRIPT = <<EOF
 # Retrieve the version variables from the provisioning arguments
 LIBUV_VERSION=${1}
 CPP_DRIVER_VERSION=${2}
-CPP_DRIVER_DSE_VERSION=${3}
+CPP_DSE_DRIVER_VERSION=${3}
+CPP_DSE_DRIVER_PREFIX=https://github.com/
+CPP_DSE_DRIVER_REPO=datastax
+if [ -f /home/vagrant/.ssh/id_rsa ]
+then
+  CPP_DSE_DRIVER_PREFIX=git@github.com:
+  CPP_DSE_DRIVER_REPO=riptano
+
+  sudo su vagrant << VAGRANT_USER_EOF
+  chmod 700 /home/vagrant/.ssh
+  chmod 400 /home/vagrant/.ssh/*id_rsa
+VAGRANT_USER_EOF
+fi
 
 # Install package updates
 printf "Installing System Packages ...\\n"
@@ -28,6 +41,9 @@ rpm --quiet --import /vagrant/RPM-GPG-KEY.dag.txt
 rpm --quiet -i /vagrant/rpmforge-release-0.5.3-1.el5.rf.*.rpm
 
 # Install the yum packages
+echo "http://vault.centos.org/5.11/os/x86_64/" > /var/cache/yum/base/mirrorlist.txt
+echo "http://vault.centos.org/5.11/extras/x86_64/" > /var/cache/yum/extras/mirrorlist.txt
+echo "http://vault.centos.org/5.11/updates/x86_64/" > /var/cache/yum/updates/mirrorlist.txt
 yum -q -y install automake buildsys-macros cmake gcc-c++ git libtool openssl-devel pkgconfig redhat-rpm-config rpm-build > /dev/null 2>&1
 
 sudo su vagrant << VAGRANT_USER_EOF
@@ -35,6 +51,7 @@ sudo su vagrant << VAGRANT_USER_EOF
 cat >> /home/vagrant/.ssh/config << SSH_CONFIG_EOF
 Host *
     StrictHostKeyChecking no
+    UserKnownHostsFile=/dev/null
 SSH_CONFIG_EOF
 chmod 400 /home/vagrant/.ssh/config
 
@@ -44,7 +61,7 @@ mkdir -p packages/cpp-driver
 
 # Download, build, package, and install libuv
 printf "Building libuv Packages [${LIBUV_VERSION}] ...\\n"
-git clone --depth 1 --branch update_download_url https://github.com/mikefero/libuv-packaging.git libuv-packaging > packages/libuv-v${LIBUV_VERSION}-build.log 2>&1
+git clone --depth 1 https://github.com/mpenick/libuv-packaging.git libuv-packaging > packages/libuv-v${LIBUV_VERSION}-build.log 2>&1
 pushd libuv-packaging > /dev/null 2>&1
 ./build_rpm.sh ${LIBUV_VERSION} >> ../packages/libuv-v${LIBUV_VERSION}-build.log 2>&1
 cp -f build/RPMS/x86_64/libuv-*.rpm ../packages/libuv
@@ -63,19 +80,19 @@ then
 fi
 
 # Download, build, and package DataStax C/C++ DSE driver
-#if [ -n "${CPP_DRIVER_DSE_VERSION}" ]
-#then
-#  printf "Building C/C++ DSE Driver Packages [${CPP_DRIVER_DSE_VERSION}] ...\\n"
-#  mkdir -p packages/cpp-driver-dse
-#  git clone --depth 1 --branch ${CPP_DRIVER_DSE_VERSION} git@github.com:datastax/cpp-driver-dse.git cpp-driver-dse > packages/cpp-driver-dse-v${CPP_DRIVER_DSE_VERSION}-build.log 2>&1
-#  pushd cpp-driver-dse > /dev/null 2>&1
-#  git submodule update --init --recursive  > /dev/null 2>&1
-#  pushd ../cpp-driver-dse/packaging > /dev/null 2>&1
-#  ./build_rpm.sh >> ../../packages/cpp-driver-dse-v${CPP_DRIVER_DSE_VERSION}-build.log 2>&1
-#  cp -f build/RPMS/x86_64/dse-cpp-driver-*.rpm ../../packages/cpp-driver-dse
-#  popd > /dev/null 2>&1
-#  popd > /dev/null 2>&1
-#fi
+if [ -n "${CPP_DSE_DRIVER_VERSION}" ]
+then
+  printf "Building C/C++ DSE Driver Packages [${CPP_DSE_DRIVER_REPO}] [${CPP_DSE_DRIVER_VERSION}] ...\\n"
+  mkdir -p packages/cpp-dse-driver
+  git clone --depth 1 --branch ${CPP_DSE_DRIVER_VERSION} ${CPP_DSE_DRIVER_PREFIX}${CPP_DSE_DRIVER_REPO}/cpp-dse-driver.git cpp-dse-driver > packages/cpp-dse-driver-v${CPP_DSE_DRIVER_VERSION}-build.log 2>&1
+  pushd cpp-dse-driver > /dev/null 2>&1
+  git submodule update --init --recursive  > /dev/null 2>&1
+  pushd ../cpp-dse-driver/packaging > /dev/null 2>&1
+  ./build_rpm.sh >> ../../packages/cpp-dse-driver-v${CPP_DSE_DRIVER_VERSION}-build.log 2>&1
+  cp -f build/RPMS/x86_64/dse-cpp-driver-*.rpm ../../packages/cpp-dse-driver
+  popd > /dev/null 2>&1
+  popd > /dev/null 2>&1
+fi
 VAGRANT_USER_EOF
 EOF
 
@@ -94,7 +111,14 @@ EOF
 ##
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Create CentOS 5.11 VM
-  config.vm.box = "debo/centos-5.11-x86_64"
+  config.vm.box = "bento/centos-5.11"
+
+  # Determine if caching can be enabled
+  # This can be enabled by installing the `vagrant-cachier` plugin
+  #   vagrant plugin install vagrant-cachier
+  if Vagrant.has_plugin?("vagrant-cachier")
+    config.cache.scope = :box
+  end
 
   # Define the hostname and IP address
   config.vm.define "centos_5-11" do |cpp_driver|
@@ -103,7 +127,16 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
 
   # Define shared/synced folder for package builds to be placed
+  Dir.mkdir("../../../packages/centos/5") unless FileUtils::mkdir_p("../../../packages/centos/5")
   config.vm.synced_folder "../../../packages/centos/5", "/home/vagrant/packages"
+
+  # Setup use for private or public repository
+  if File.exist?("../../../id_rsa") then
+    config.vm.provision :file do |private_key|
+      private_key.source = "../../../id_rsa"
+      private_key.destination = "/home/vagrant/.ssh/id_rsa"
+    end
+  end
 
   # Prepare/Provision the VM
   config.vm.provision :shell do |root_provision|
@@ -114,12 +147,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # VM parameters for the C/C++ driver test VM machine
   config.vm.provider :virtualbox do |provider|
-    provider.name = "cpp-driver-5-11-packaging"
+    provider.name = "centos-5-11"
+    provider.customize ["modifyvm", :id, "--groups", "/Drivers/Packaging"]
     provider.customize ["modifyvm", :id, "--memory", "2048"]
     provider.customize ["modifyvm", :id, "--vram", "32"]
     provider.customize ["modifyvm", :id, "--cpus", "4"]   
     provider.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
     provider.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     provider.customize ["modifyvm", :id, "--nictype1", "82543GC"]
+    provider.customize ["modifyvm", :id, "--cableconnected1", "on"]
   end
 end
